openshift/vault-istio-blueprint-fileset/dc/istio/gateway-sample-dc.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: main-ingress-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "api.dc.bank.example.com"
      tls:
        mode: SIMPLE
        credentialName: istio-ingressgateway-tls-dc
